--- a/templates/kapacitor.conf.j2
+++ b/templates/kapacitor.conf.j2
@@ -196,6 +196,20 @@ data_dir = "{{ kapacitor_data_dir }}"
   # without explicitly marking them in the TICKscript.
   global = {{ kapacitor_pagerduty_global|default(false)|bool|lower }}
 
+
+[opsgenie2]
+  # Configure Opsgenie
+  enabled = {{ kapacitor_opsgenie_enabled|default(false)|bool|lower }}
+  # OpsGenie api key
+  api-key = "{{ kapacitor_opsgenie_api_key }}"
+  # Default teams to be notified
+  teams = [ "{{ kapacitor_opsgenie_teams }}"]
+  # The OpsGenie API URL. This should not need to be changed.
+  url = "{{ kapacitor_opsgenie_url}}"
+  #The Recovery Action specifies which action to take when alerts recover
+  recovery_action = "{{ kapacitor_opsgenie_recovery_action }}"
+  global = {{ kapacitor_opsgenie_global|default(false)|bool|lower }}
+
 [slack]
   # Configure Slack.
   enabled = {{ kapacitor_slack_enabled|default(false)|bool|lower }}
